# grant-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: chatbot.yaml  concept_map.yaml  data_manifest.yaml  datasets_allowlist.yaml  frames.yaml  pipeline.yaml
docs/: DEMO.md  REPLICATION.md  STARTUP_GUIDE.md  system_design.qmd
prompts/v1/: clarifier_concept.yaml  clarifier_geo.yaml  clarifier_other.yaml  concept_rewriter.yaml  flat_dataset_description.txt  followup_gap_finder.yaml  gen_table_questions.yaml  gen_variable_questions.yaml  geo_extraction.yaml  glossary_and_caveats.txt  (+15 more)
reports/: smoke_suite_report.md
tests/: conftest.py  test_agent_routing.py  test_aggregator.py  test_anomaly_detector.py  test_api_cache.py  test_census_caller.py  test_clarifier.py  test_comparators.py  test_composer.py  test_concept_map.py  test_concept_rewriter.py  test_decomposer.py  test_decomposition_cache.py  test_derived_data_dump.py  test_extractor_mocked.py  test_followup_gap_finder.py  test_geo_resolver.py  test_grant_frame_matcher.py  test_magnitude_contextualizer.py  test_metadata_search.py  test_orchestrator.py  test_peer_context.py  test_peer_retriever.py  test_plan_reviewer.py  test_planner.py  test_router_critic.py  test_runtime_embed_budget.py  test_scope_gate.py  test_semantic_router.py  test_synthesizer.py  test_trend_expansion.py  test_universe_picker.py
tools/: build_cards.py  build_embedding_index.py  build_universe_embeddings.py  fetch_neighborhood_features.py  fetch_peer_features.py  run_smoke_suite.py  trace_orchestrator.py
(+92 files in other folders)
